--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
         let isGameRunning = false;
         let isJumping = false;
         let verticalVelocity = 0;
-        const gravity = 1;
-        const jumpStrength = 18;
+        const gravity = 1.5; // AUMENTADA: La gravedad es más fuerte, el dinosaurio cae más rápido.
+        const jumpStrength = 14; // REDUCIDA: La fuerza de salto es menor, el dinosaurio salta más bajo.
         let score = 0;
         let gameSpeed = 5;
         let obstacles = [];
